--- a/templates/index.html
+++ b/templates/index.html
@@ -1,63 +1,65 @@
-<!DOCTYPE html>
-<html lang=tr dir="ltr">
+<!DOCTYPE HTML>
+
+<html>
 <head>
-    <meta charset="utf-8">
-    <title>Op. Dr. Hakan TETİK</title>
-    <link rel="stylesheet" type="text/css" href="static/styles.css">
-    <link rel="icon" href="static/favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap"
-          rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+	<title>Op. Dr. Hakan TETİK</title>
+	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<!--[if lte IE 8]>
+	<script src="static/assets/js/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="static/assets/css/main.css"/>
+	<link rel="icon" href="static/images/favicon.ico">
+	<!--[if lte IE 9]>
+	<link rel="stylesheet" href="static/assets/css/ie9.css"/><![endif]-->
+	<!--[if lte IE 8]>
+	<link rel="stylesheet" href="static/assets/css/ie8.css"/><![endif]-->
+	<noscript>
+		<link rel="stylesheet" href="static/assets/css/noscript.css"/>
+	</noscript>
 </head>
-<body>
-<div class="top-container">
-    <img class="brain-img" src="static/brain.png" alt="brain-img">
-    <h1>Op. Dr. Hakan TETİK</h1>
-    <h2>Beyin, Sinir ve Omurga Cerrahisi Uzmanı</h2>
-    <img class="bottom-spine" src="static/spine-top.png" alt="spine-top-img">
-</div>
-<div class="middle-container">
-    <div class="profile">
-        <img src="static/hakan-circle-50.png" alt="profile-img">
-        <h2>Merhaba.</h2>
-        <p class="hi-description">Beyin ve Sinir Cerrahisi Uzmanı 🧠, Nerd 💾, Python/HTML/CSS developer 🧑‍💻. Expert
-            coffee drinker ☕️</p>
-    </div>
-    <hr>
-    <div class="skills">
-        <h2>Beceriler.</h2>
-        <div class="skill-row">
-            <img class="spine-img" src="static/spine.png" alt="spine-img">
-            <h3>Omurga Cerrahisi</h3>
-            <p class="spine-description">Beyin, Sinir ve Omurilik cerrahisi üzerine ihtisasımı tamamladıktan sonra
-                özellikle Omurga ve omurilik cerrahisi üzerine çalışmaktayım. Bu bağlamda doğumsal, edinsel ve travmatik
-                Omurga
-                hastalıklarının cerrahi ve medikal tedavileri ile ilgilenmekteyim.</p>
-        </div>
-        <div class="skill-row">
-            <img class="web-coding-img" src="static/web-coding.png" alt="">
-            <h3>Kodlama</h3>
-            <p class="web-coding-description">Çocoukluktan beri teknoloji ve bilgisayuarla iç içe büyüdüm.
-                Çocukluktan beri programlamayı öğrenmek istesemde ancak ihitsas sonrası buna fırsat bulabildim.
-                Halen Python kodlama, Makine öğrenimi, HTML5 ve CSS öğrenmeye devam ediyorum.</p>
-        </div>
-    </div>
-    <hr>
-    <div class="contact-me">
-        <h2>İletişime geçin</h2>
-        <h3>Lütfen iletişim kurmaktan çekinmeyin.</h3>
-        <a href="mailto:hakantetik@gmail.com" class="mail-button">E-mail</a>
-    </div>
+<body class="is-loading">
+
+<!-- Wrapper -->
+<div id="wrapper">
+
+	<!-- Main -->
+	<section id="main">
+		<header>
+			<span class="avatar"><img src="static/images/avatar.jpg" alt="Dr. Hakan TETİK img"/></span>
+			<h1>Op. Dr. Hakan TETİK</h1>
+			<p>Beyin ve Sinir Cerrahisi Uzmanı</p>
+			<p>Junior Developer</p>
+		</header>
+
+		<footer>
+			<ul class="icons">
+				<li><a href="https://twitter.com/PhantomSurgeon" class="fa-twitter">Twitter</a></li>
+				<li><a href="https://www.instagram.com/phantom_in_the_shell/" class="fa-instagram">Instagram</a></li>
+				<li><a href="https://github.com/hakantetik" class="fa-github">GitHub</a></li>
+			</ul>
+		</footer>
+	</section>
+
+	<!-- Footer -->
+	<footer id="footer">
+		<ul class="copyright">
+			<li>&copy; Dr. Hakan TETİK 2021</li>
+			<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+		</ul>
+	</footer>
+
 </div>
 
-<div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/hakan-tetik-50482439/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/PhantomSurgeon">Twitter</a>
-    <a class="footer-link" href="https://github.com/hakantetik">Github</a>
-    <p class="copy-right">© 2021 Op. Dr. Hakan Tetik</p>
-</div>
+<!-- Scripts -->
+<!--[if lte IE 8]>
+<script src="static/assets/js/respond.min.js"></script><![endif]-->
+<script>
+				if ('addEventListener' in window) {
+					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-loading\b/, ''); });
+					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
+				}
+
+</script>
 
 </body>
 </html>
